--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "1-lesson",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://btwnull.github.io/13-todolist",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -17,10 +18,11 @@
     "@types/uuid": "^9.0.8",
     "axios": "^1.7.2",
     "gh-pages": "^6.3.0",
-    "homepage": "http://btwnull.github.io/13-todolist",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.1.1",
+    "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
